# cyber-cycles

./: .gitignore  00_START_HERE.md  01_ARCHITECTURE.md  02_BUILD_DEPLOY.md  03_SPACETIMEDB_GUIDE.md  04_GAME_MECHANICS.md  05_KNOWN_ISSUES.md  06_FUTURE_FEATURES.md  AGENTS.md  ARMAGETRON_ANALYSIS_SUMMARY.md  HUMAN_TESTING_PLAN.md  PHASE0_COMPLETE.md  PHASE1_PLAN.md  PHASE1_PROGRESS.md  PHASE1_WEEK3_COMPLETE.md  PHASE1_WEEK3_TASKS.md  PHASE1_WEEK4_COMPLETE.md  PHASE1_WEEK4_TASKS.md  PHASE1_WEEKS1-2_COMPLETE.md
cyber-client/: index.html  package.json  vite.config.js  vitest.config.js
cyber-client/docs/: BENCHMARK_REPORT.md  INTEGRATION_GUIDE.md  MEMORY_PROFILE.md
cyber-client/examples/: game-loop-example.js
cyber-client/src/: game-logic.js  main.js
cyber-client/src/core/: Config.js  EntityManager.js  EventSystem.js  GameLoop.js  SpatialHash.js
cyber-client/src/game/: PlayerEntity.js  TrailEntity.js
cyber-client/src/network/: InputBuffer.js
cyber-client/src/physics/: CollisionDetection.js  RubberSystem.js  VerletIntegration.js
cyber-client/src/ui/: TestOverlay.js
cyber-client/tests/: constants.test.js  game-logic.test.js  setup.js  state.test.js  utils.test.js
cyber-client/tests/benchmarks/: benchmark-runner.js  physics.bench.js  rendering.bench.js
cyber-client/tests/core/: config.test.js  game-loop.test.js  (+2 more)
cyber-cycles-db/spacetimedb/: Cargo.toml
cyber-cycles-db/spacetimedb/src/: lib.rs
cyber-cycles-db/spacetimedb/src/physics/: collision.rs  config.rs  mod.rs  rubber.rs
cyber-cycles-db/spacetimedb/tests/: integration_tests.rs  physics_tests.rs
(+18 files in other folders)
