[package]
name = "cyber_cycles_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spacetimedb = { version = "2.0.1" }
log = "0.4"

[dev-dependencies]
rstest = "0.23"
